--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3000
-DB_NAME=postgres
+DB_NAME=localhost
 DB_USERNAME=postgres
-DB_PASSWORD=
+DB_PASSWORD=root
 DB_HOST=localhost
 DB_PORT=5433
