--- a/client-ui/package.json
+++ b/client-ui/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^18.2.0",
     "@angular/material": "^18.2.6",
     "@angular/platform-browser": "^18.2.0",
@@ -44,6 +45,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "tailwindcss": "^3.4.13",
     "typescript": "~5.5.2"
   }
 }
