--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "janga",
   "version": "1.0.0",
   "scripts": {
-    "dev": "nodemon --watch 'src/**/*' -e ts,tsx --exec ts-node ./src/index.ts"
+    "dev": "tsc && nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -13,11 +13,13 @@
     "@types/node": "^22.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-validator": "^7.2.0",
     "nodemon": "^3.1.4",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
     "sequelize": "^6.37.3",
     "sequelize-typescript": "^2.1.6",
+    "slugify": "^1.6.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   }
