--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,7 @@
     "@angular/core": "^18.2.0",
     "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^18.2.0",
-    "@angular/material": "^18.2.6",
+    "@angular/material": "~18.2.6",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/platform-server": "^18.2.0",
