--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.2.0",
+    "lodash": "^4.17.21",
     "nodemon": "^3.1.4",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
@@ -25,6 +26,7 @@
     "typescript": "^5.5.4"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.0.3",
     "@types/cors": "^2.8.17"
   }
 }
