--- a/api/package.json
+++ b/api/package.json
@@ -2,7 +2,7 @@
   "name": "janga",
   "version": "1.0.0",
   "scripts": {
-    "dev": "nodemon --watch 'src/**/*' -e ts,tsx --exec ts-node ./src/index.ts"
+    "dev": "tsc && nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +13,7 @@
     "@types/node": "^22.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "5.0.0",
     "express-validator": "^7.2.0",
     "lodash": "^4.17.21",
     "nodemon": "^3.1.4",
