--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^22.2.0",
+    "@types/swagger-ui-express": "^4.1.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "5.0.0",
@@ -22,7 +23,10 @@
     "sequelize": "^6.37.3",
     "sequelize-typescript": "^2.1.6",
     "slugify": "^1.6.6",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
+    "typedi": "^0.10.0",
     "typescript": "^5.5.4"
   },
   "devDependencies": {
